--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                     <h1>Pomodoro <br> Timer</h1>
                 </div>
                 <div class="break">
+                    <button id="pomodoro">Pomodoro</button>
                     <button id="short-break">Short break</button>
                     <button id="long-break">Long break</button>
                 </div>
